2006-08-10  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo: reimplement the "useful classes" index
	with actual texinfo indices. The .info rendering is a bit
	weird-looking but it works well, and the HTML rendering is quite
	nice. This also puts the index targets in the regular flow of the
	text, which is easier to maintain.

2006-08-06  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (ShellCommand.__init__): patch from
	Kevin Turner to prefer the environ= argument be a list rather than
	a string. If it is a list, it will be joined with a platform-local
	os.pathsep delimiter, and then prepended to any existing
	$PYTHONPATH value. This works better in cross-platform (i.e.
	windows buildslaves) environments when you need to push multiple
	directories onto the front of the path.
	(SlaveShellCommand): documented the new magic
	* docs/buildbot.texinfo (ShellCommand): documented the new magic
	in a user-visible form

	* buildbot/test/test_vc.py (BaseHelper.dovc): patch from Kevin
	Turner to prefer lists over strings when creating/running VC
	commands during unit tests. This is clearly necessary to survive
	vcexe containing spaces, like "C:\Program Files\darcs.exe". I
	renamed the wq() function to qw() though, since that's how it's
	spelled in perl. Eventually I'd prefer all commands to be
	specified with lists.

	* buildbot/slave/commands.py (LogFileWatcher): handle logfiles
	which are deleted (or not yet created) correctly. Also add
	failsafe code to not explode if the file-watching poller doesn't
	get started. Thanks to JP Calderone for the catch and the poller
	patch.
	* buildbot/test/test_shell.py (SlaveSide._testLogFiles): add test
	for that case
	* buildbot/test/emitlogs.py: same

	* NEWS: summarize recent changes

	* docs/buildbot.texinfo (Debug options): suggest an .ssh/options
	clause to avoid the "host key mismatch" warning

	* buildbot/process/step_twisted.py (Trial.start): if the